enviroment config changes

--- a/Codigo/Obligatorio/codigo/ArenaGestor/ArenaGestor.API/appsettings.json
+++ b/Codigo/Obligatorio/codigo/ArenaGestor/ArenaGestor.API/appsettings.json
@@ -3,7 +3,7 @@
     "ExtensionsFolder": "c:/ArenaGestorExtensions/"
   },
   "ConnectionStrings": {
-    "ArenaGestorContext": "Server=.;Database=ArenaGestorDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+    "ArenaGestorContext": "Server=.\\SQLEXPRESS; Database=ArenaGestorDB; Integrated Security=True; Trusted_Connection=True; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
