Fix working directory yml

--- a/Codigo/Obligatorio/codigo/ArenaGestor/.github/workflows/actions.yml
+++ b/Codigo/Obligatorio/codigo/ArenaGestor/.github/workflows/actions.yml
@@ -29,6 +29,7 @@ jobs:
 
     - name: Install dependencies
       run: dotnet restore
+      working-directory: Codigo/Obligatorio/codigo/ArenaGestor
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
