--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   DOTNET_VERSION: '5.0'
-  working-directory: ./Codigo/Obligatorio/codigo/ArenaGestor
+  working-directory: './Codigo/Obligatorio/codigo/ArenaGestor'
 
 jobs:
   build:
@@ -30,8 +30,8 @@ jobs:
 
     - name: Install dependencies
       run: dotnet restore
-      working-directory: $${{ env.working-directory }}
+      working-directory: ${{ env.working-directory }}
       
     - name: Build
       run: dotnet build --configuration Release --no-restore
-      working-directory: $${{ env.working-directory }}
+      working-directory: ${{ env.working-directory }}
