--- a/Codigo/Obligatorio/codigo/ArenaGestor/SpecFlowSnack.spec/SpecFlowSnack.spec.csproj
+++ b/Codigo/Obligatorio/codigo/ArenaGestor/SpecFlowSnack.spec/SpecFlowSnack.spec.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.40" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -17,8 +19,11 @@
 
   <ItemGroup>
     <Folder Include="Drivers\" />
-    <Folder Include="StepDefinitions\" />
     <Folder Include="Support\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ArenaGestor.API\ArenaGestor.API.csproj" />
   </ItemGroup>
 
 </Project>
